src/snapshots/log2src__log_format__tests__no_body.snap
---
source: src/log_format.rs
expression: rep
---
log format is missing capture: body
    Diagnostic severity: error
