src/snapshots/log2src__log_format__tests__unknown_cap.snap
---
source: src/log_format.rs
expression: rep
---
unknown capture in log format: extra
    Diagnostic severity: error
